# simple-tf-lambda

./: .gitignore  pyproject.toml
terraform/: main.tf  variables.tf  versions.tf
terraform/src/: index.py  requirements.txt
