[tool.poetry]
name = "tf-lambda"
version = "0.1.0"
description = ""
authors = ["joserobertsvery <joserobertsvery@verytechnology.com>"]
readme = "README.md"
packages = [{include = "tf_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
